changed some colors

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,7 @@
 .bg-erika {
     background-color: #C50073 !important;
 }
+
+.portfolio-box-caption {
+    background: rgba(197,0,115,0.9) !important;
+}
